# weather1

./: .gitignore  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  html_to_c.py  idf_component.yml  index.html  index.html.h  main.c  process_html.py  weather.css  weather.css.h  weather.h  web_server.c  wifi_interface.c
main/web_content/: index.html  weather.js
